unpackaged/main/default/objects/CMPL123CME__Complaint__c/CMPL123CME__Complaint__c.object-meta.xml
<CustomObject>
    <label>Complaint</label>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>Ticket No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>