unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Age__c.field-meta.xml
<CustomField>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>