unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Age_at_Time_of_Event__c.field-meta.xml
<CustomField>
        <fullName>Age_at_Time_of_Event__c</fullName>
        <label>Age at Time of Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>