unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Age_Units__c.field-meta.xml
<CustomField>
        <fullName>Age_Units__c</fullName>
        <label>Age Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Years</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>