unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Approved_By__c.field-meta.xml
<CustomField>
        <fullName>Approved_By__c</fullName>
        <label>Review Approved By</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>