unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
        <fullName>Approved_Date__c</fullName>
        <label>Review Approved Date</label>
        <type>DateTime</type>
    </CustomField>