unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Assessment_Completed__c.field-meta.xml
<CustomField>
        <fullName>Assessment_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessment Completed</label>
        <type>Checkbox</type>
    </CustomField>