unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Awaiting_Review_Closure_Count__c.field-meta.xml
<CustomField>
        <fullName>Awaiting_Review_Closure_Count__c</fullName>
        <label>Awaiting Review Closure Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>