unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Birthdate__c.field-meta.xml
<CustomField>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </CustomField>