unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Closed_By__c.field-meta.xml
<CustomField>
        <fullName>Closed_By__c</fullName>
        <label>Complaint Closed By</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>