unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
        <fullName>Closed_Date__c</fullName>
        <label>Complaint Closed Date</label>
        <type>DateTime</type>
    </CustomField>