unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Actual_Risk_Rating__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Actual_Risk_Rating__c</fullName>
        <label>Actual Risk Rating</label>
        <type>TextArea</type>
    </CustomField>