unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Body_Function_Impairment__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Body_Function_Impairment__c</fullName>
        <description>Body Function Impairment(Patient )</description>
        <label>Body Function Impairment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>