unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Body_Structure_Damage__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Body_Structure_Damage__c</fullName>
        <description>Body Structure Damage</description>
        <label>Body Structure Damage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>