unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Business_Risk__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Business_Risk__c</fullName>
        <description>Business Risk</description>
        <label>Business Risk</label>
        <type>TextArea</type>
    </CustomField>