unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__CAPA_Determination__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__CAPA_Determination__c</fullName>
        <label>CAPA Determination</label>
        <type>TextArea</type>
    </CustomField>