unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Catalog_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Catalog_No__c</fullName>
        <label>Catalog No</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>