unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Compliance_Risk__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Compliance_Risk__c</fullName>
        <label>Compliance Risk</label>
        <type>TextArea</type>
    </CustomField>