unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Concomitant_Products__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Concomitant_Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Concomitant Products</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </CustomField>