unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Contact__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>CMPL123__Contact__c</referenceTo>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </CustomField>