unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Customer__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Complaints_Customer</relationshipName>
        <type>Lookup</type>
    </CustomField>