unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Date_Closed__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_Closed__c</fullName>
        <description>Closed Date</description>
        <inlineHelpText>Closed Date</inlineHelpText>
        <label>Date Closed</label>
        <type>DateTime</type>
    </CustomField>