unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Date_Due__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_Due__c</fullName>
        <label>Date Due</label>
        <type>DateTime</type>
    </CustomField>