unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Date_Opened__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_Opened__c</fullName>
        <label>Date Opened</label>
        <type>DateTime</type>
    </CustomField>