unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Date_Received__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </CustomField>