unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Date_Return_Requested__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_Return_Requested__c</fullName>
        <label>Date Return Requested</label>
        <type>Date</type>
    </CustomField>