unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Departments__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Departments__c</fullName>
        <label>Departments</label>
        <type>TextArea</type>
    </CustomField>