unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Disability__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Disability__c</fullName>
        <label>Disability</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>