unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Due_Date_Count__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Due_Date_Count__c</fullName>
        <formula>IF(CMPL123CME__Date_Closed__c &lt;  CMPL123CME__Date_Due__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>