unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Duration_of_Use__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Duration_of_Use__c</fullName>
        <label>Duration of Use</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>