unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__End_Date_of_Use__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__End_Date_of_Use__c</fullName>
        <label>End Date of Use</label>
        <type>Date</type>
    </CustomField>