unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Event_Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Event_Description__c</fullName>
        <label>Event Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>