unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Expiration_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </CustomField>