unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Form__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Form__c</fullName>
        <description>TBD</description>
        <label>Form</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>