unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Health_Risk__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Health_Risk__c</fullName>
        <description>Health Risk</description>
        <label>Health Risk</label>
        <type>TextArea</type>
    </CustomField>