unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Immediate_Actions__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Immediate_Actions__c</fullName>
        <label>Immediate Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>