unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Impact__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Impact__c</fullName>
        <description>Impact</description>
        <label>Impact</label>
        <type>TextArea</type>
    </CustomField>