unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Impact_Analysis__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Impact_Analysis__c</fullName>
        <description>Impact Analysis</description>
        <label>Impact Analysis</label>
        <type>TextArea</type>
    </CustomField>