unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Initial_Reporter__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Initial_Reporter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Reporter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaints_Reporter</relationshipName>
        <type>Lookup</type>
    </CustomField>