unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Initiator__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Initiator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </CustomField>