unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Material__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Material__c</fullName>
        <label>Material</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>