unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__MDR_Creation__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__MDR_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MDR report creation</description>
        <label>MDR Creation</label>
        <type>Checkbox</type>
    </CustomField>