unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__MDR_Status__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__MDR_Status__c</fullName>
        <label>MDR Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>