unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Non_Trivial_Medication_Surgery__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Non_Trivial_Medication_Surgery__c</fullName>
        <description>Non-Trivial Medication/Surgery</description>
        <label>Non-Trivial Medication/Surgery</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>