unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Other_Contacts__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Other_Contacts__c</fullName>
        <label>Other Contacts</label>
        <type>TextArea</type>
    </CustomField>