unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Other_Outcome__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Other_Outcome__c</fullName>
        <description>Other Outcome</description>
        <label>Other Outcome</label>
        <type>TextArea</type>
    </CustomField>