unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Other_Outcome_Specify__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Other_Outcome_Specify__c</fullName>
        <label>Other Outcome - Specify</label>
        <type>TextArea</type>
    </CustomField>