unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Other_Relevant_History__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Other_Relevant_History__c</fullName>
        <description>Other Relevant History</description>
        <label>Other Relevant History</label>
        <type>TextArea</type>
    </CustomField>