unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Other_Reportable_Countries__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Other_Reportable_Countries__c</fullName>
        <label>Other Reportable Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>