unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Outcomes_attributed_to_AE__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Outcomes_attributed_to_AE__c</fullName>
        <description>Outcomes attributed to AE</description>
        <label>Outcomes attributed to AE</label>
        <type>TextArea</type>
    </CustomField>