unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Patient__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123__Contact__c.CMPL123__Contact_Type__c</field>
                <operation>equals</operation>
                <value>Patient</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123__Contact__c</referenceTo>
        <relationshipName>Complaints_Patient</relationshipName>
        <type>Lookup</type>
    </CustomField>