unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Patient_Family_History__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Patient_Family_History__c</fullName>
        <description>Patient Family History</description>
        <label>Patient Family History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>