unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Probablity_Measure__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Probablity_Measure__c</fullName>
        <label>Probability Measure</label>
        <type>TextArea</type>
    </CustomField>