unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Product__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipName>Complaints_Product</relationshipName>
        <type>Lookup</type>
    </CustomField>