unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Reporter_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Reporter_Type__c</fullName>
        <label>Reporter Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>