unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Risk_Analysis__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Risk_Analysis__c</fullName>
        <description>Risk Analysis</description>
        <label>Risk Analysis</label>
        <type>TextArea</type>
    </CustomField>