unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Severity_Measure__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Severity_Measure__c</fullName>
        <description>Severity Measure</description>
        <label>Severity Measure</label>
        <type>TextArea</type>
    </CustomField>