unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Supervisor__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaints_Supervisor</relationshipName>
        <type>Lookup</type>
    </CustomField>