unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Timeliness_Justification__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Timeliness_Justification__c</fullName>
        <label>Timeliness Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>