unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/CMPL123CME__Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Quality</fullName>
                </value>
                <value>
                    <fullName>Medical Reaction</fullName>
                </value>
                <value>
                    <fullName>Packaging Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>