unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Complete_Investigation_By__c.field-meta.xml
<CustomField>
        <fullName>Complete_Investigation_By__c</fullName>
        <label>Complete Investigation By</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>