unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Complete_Investigation_Date__c.field-meta.xml
<CustomField>
        <fullName>Complete_Investigation_Date__c</fullName>
        <label>Complete Investigation Date</label>
        <type>DateTime</type>
    </CustomField>