unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Contact_Notes__c.field-meta.xml
<CustomField>
        <fullName>Contact_Notes__c</fullName>
        <label>Contact Notes</label>
        <type>TextArea</type>
    </CustomField>