unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Count_of_worlflow_actions_performed__c.field-meta.xml
<CustomField>
        <fullName>Count_of_worlflow_actions_performed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count of worlflow actions performed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>