unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Coutnt_Of_Workflow_actions__c.field-meta.xml
<CustomField>
        <fullName>Coutnt_Of_Workflow_actions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Coutnt Of Workflow actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>