unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Evaluation_Completed_By__c.field-meta.xml
<CustomField>
        <fullName>Evaluation_Completed_By__c</fullName>
        <label>Evaluation Completed By</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>