unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Evaluation_Completed_Date__c.field-meta.xml
<CustomField>
        <fullName>Evaluation_Completed_Date__c</fullName>
        <label>Evaluation Completed Date</label>
        <type>DateTime</type>
    </CustomField>