unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Fax__c.field-meta.xml
<CustomField>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </CustomField>