unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/If_no_reason_for_the_non_complaint_st__c.field-meta.xml
<CustomField>
        <fullName>If_no_reason_for_the_non_complaint_st__c</fullName>
        <label>If no, reason for the non-complaint st</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>