unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Investigation_Status__c.field-meta.xml
<CustomField>
        <fullName>Investigation_Status__c</fullName>
        <label>Investigation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Investigation Completed</fullName>
                </value>
                <value>
                    <fullName>Investigation Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>