unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Investigation_Summary_and_Conclusion__c.field-meta.xml
<CustomField>
        <fullName>Investigation_Summary_and_Conclusion__c</fullName>
        <label>Investigation Summary and Conclusion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>