unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Key_Value__c.field-meta.xml
<CustomField>
        <fullName>Key_Value__c</fullName>
        <label>Key Value</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>