unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/No_of_approvers__c.field-meta.xml
<CustomField>
        <fullName>No_of_approvers__c</fullName>
        <formula>IF(ISBLANK(Test_User1__c),0,1)+ 
IF(ISBLANK(Test_User2__c),0,1)+ 
IF(ISBLANK(Test_User3__c),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of approvers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>