unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Opened_By__c.field-meta.xml
<CustomField>
        <fullName>Opened_By__c</fullName>
        <label>Opened By</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>