unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Patient_ID__c.field-meta.xml
<CustomField>
        <fullName>Patient_ID__c</fullName>
        <label>Patient ID</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>