unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Phone_1__c.field-meta.xml
<CustomField>
        <fullName>Phone_1__c</fullName>
        <label>Phone 1</label>
        <type>Phone</type>
    </CustomField>