unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Phone_2__c.field-meta.xml
<CustomField>
        <fullName>Phone_2__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </CustomField>