unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Product_Lot_Number__c.field-meta.xml
<CustomField>
        <fullName>Product_Lot_Number__c</fullName>
        <label>Product Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>