unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Product_Name__c.field-meta.xml
<CustomField>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </CustomField>