unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Re_Opened_By__c.field-meta.xml
<CustomField>
        <fullName>Re_Opened_By__c</fullName>
        <label>Re-Opened By</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>