unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Re_Opened_Date__c.field-meta.xml
<CustomField>
        <fullName>Re_Opened_Date__c</fullName>
        <label>Re-Opened Date</label>
        <type>DateTime</type>
    </CustomField>