unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Reject_Complaint_By__c.field-meta.xml
<CustomField>
        <fullName>Reject_Complaint_By__c</fullName>
        <label>Complaint Rejected By</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>