unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Reject_Complaint_Date__c.field-meta.xml
<CustomField>
        <fullName>Reject_Complaint_Date__c</fullName>
        <label>Complaint Rejected Date</label>
        <type>DateTime</type>
    </CustomField>