unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Rejected_By__c.field-meta.xml
<CustomField>
        <fullName>Rejected_By__c</fullName>
        <label>Review Rejected By</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>