unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Rejected_Date__c.field-meta.xml
<CustomField>
        <fullName>Rejected_Date__c</fullName>
        <label>Review Rejected Date</label>
        <type>DateTime</type>
    </CustomField>