unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Related_Inquiry__c.field-meta.xml
<CustomField>
        <fullName>Related_Inquiry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Inquiry</label>
        <referenceTo>Inquiry__c</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </CustomField>