unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Root_Cause_Analysis__c.field-meta.xml
<CustomField>
        <fullName>Root_Cause_Analysis__c</fullName>
        <label>Root Cause Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>